fixed some styles that were not working on smaller screens

--- a/src/components/RecommendedVideos/RecommendedVideos.styles.css
+++ b/src/components/RecommendedVideos/RecommendedVideos.styles.css
@@ -1,6 +1,8 @@
 .recommended-video__card {
   width: 100%;
   display: flex;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .recommended-video__card-img {
@@ -12,4 +14,5 @@
   width: 60%;
   display: flex;
   align-items: center;
+  font-size: 2rem;
 }
