--- a/src/components/VideoDetails/VideoDetails.styles.css
+++ b/src/components/VideoDetails/VideoDetails.styles.css
@@ -28,12 +28,11 @@ iframe {
     flex-direction: column;
   }
   .video-details-selected-video {
-    background-color: blue;
+    margin-bottom: 3rem;
     width: 100%;
   }
 
   .video-details-similar-videos {
-    background-color: orange;
     width: 100%;
   }
 }
